32-Security/02-network-policy/policies/allow-curl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector:
    matchLabels:
      app: color-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: curl
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-curl
spec:
  podSelector:
    matchLabels:
      app: curl
  policyTypes:
    - Egress
  egress:
    - to:
        # - namespaceSelector:
        #     matchLabels:
        #       kubernetes.io/metadata.name: kube-system
        #   podSelector:
        #     matchLabels:
        #       k8s-app: kube-dns
        - podSelector:
            matchLabels:
              app: color-api
